--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "contracts"]
 	path = contracts
-	url = git@github.com:peterpolman/DAICO-Smart-Contract.git
+	url = git@github.com:thxproject/daico.git
